# uwns

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/native/: AGENTS.md  app.json  package.json  tsconfig.json
apps/native/app/: login.tsx  (+9 more)
apps/web/: AGENTS.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
docs/: README.md  nav.json
docs/pages/: components.md  index.md
services/api/: .env.example  AGENTS.md  README.md  pyproject.toml
services/api/app/: auth.py  config.py  db.py  main.py
services/api/app/services/actions/: models.py  repository.py  router.py  service.py
services/api/app/services/activity/: models.py  repository.py  router.py  service.py
services/api/app/services/notifications/: __init__.py  builders.py  delivery.py  models.py  registry.py  repository.py  router.py  service.py
services/api/tests/: test_actions.py  test_activity.py  test_notifications.py
supabase/: AGENTS.md  config.toml  seed.sql
supabase/migrations/: 20260225000000_baseline.sql  20260531000000_activity_events.sql  20260601000000_notifications.sql  20260601001000_notification_internal_rls_policies.sql  20260601002000_notification_realtime_select_grants.sql  20260602000000_linter_performance_fixes.sql
tooling/: AGENTS.md  clean-dev.js  clean-repo.js  generate-docs-search-index.js  generate-notification-destinations.js  generate-notification-destinations.test.js  notification-destination-config.json
tooling/tests/: generate-docs-search-index.test.js  generate-notification-destinations.test.js
(+109 files in other folders)
